--- a/frontend/src/pages/pets.module.scss
+++ b/frontend/src/pages/pets.module.scss
@@ -1,5 +1,5 @@
-@use '@/styles/theme' as theme;
-@use '@/styles/media' as media;
+@use 'styles/theme' as theme;
+@use 'styles/media' as media;
 
 .container {
   width: 100%;
