--- a/frontend/src/components/ui/navbar.module.scss
+++ b/frontend/src/components/ui/navbar.module.scss
@@ -1,5 +1,5 @@
-@use '@/styles/theme.scss' as theme;
-@use '@/styles/media.scss' as media;
+@use 'styles/theme.scss' as theme;
+@use 'styles/media.scss' as media;
 
 .container {
   width: 100%;
