use overflow-y in html element

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -1,13 +1,7 @@
-@use './media';
-@use './theme';
-
-a {
-  color: inherit;
-  text-decoration: none;
+html {
+  overflow-y: scroll;
 }
 
 body {
-  font-family: theme.$font-family-primary;
-  font-size: theme.$font-size-medium;
-  color: theme.$font-color-primary;
+  margin: 0;
 }
